--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 
 body {
 
-    color: #333;
+    color: blue;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
