--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,6 +38,11 @@ body {
 
     font-size: 20px;
 }
+#post {
+
+	background: white;
+	padding: 1em;
+
 #footer
 { background: #777;
   color: white;
